sanity-tests/snapshots/no-overrides/env0-agent_templates_agent-proxy.yml
---
# Source: env0-agent/templates/agent-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent.agent-proxy-deployment
  labels:
    env0: agent-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      env0: agent-proxy
  template:
    metadata:
      labels:
        env0: agent-proxy
      annotations:
        forcePodRestart: "STABLE"
    spec:
      volumes:
          
      restartPolicy: Always
      containers:
        - name: env0-agent-proxy
          
          image: ghcr.io/env0/deployment-agent:dev
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            # update-ca-certificates must be called before node starts
            - update-ca-certificates;
              node --enable-source-maps --max-old-space-size="600" run-proxy.js;
          resources:
            limits:
              
              # backwards defaults
              cpu: 250m
              memory: 750Mi
              
            
          volumeMounts:
            
          ports:
            - containerPort: 8000
