sanity-tests/snapshots/no-overrides/env0-agent_templates_agent-trigger.yml
---
# Source: env0-agent/templates/agent-trigger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-agent-trigger-deployment
  labels:
    env0: agent-trigger
spec:
  replicas: 1
  selector:
    matchLabels:
      env0: agent-trigger
  template:
    metadata:
      labels:
        env0: agent-trigger
      annotations:
        forcePodRestart: "STABLE"
    spec:
      serviceAccountName: agent-trigger-service-account
      restartPolicy: Always
      volumes:
        - name: tmp
          emptyDir: { }
        
      containers:
        - name: env0-agent-trigger
            
          image: ghcr.io/env0/deployment-agent:dev
          imagePullPolicy: Always
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            
          command: [ "/bin/sh", "-c" ]
          args:
            # update-ca-certificates must be called before node starts
            - update-ca-certificates;
              node --enable-source-maps run-agent-trigger.js;
          livenessProbe:
            exec:
              command:
                - rm
                - &livenessProbeFile /tmp/healthy
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 500m
              memory: 1000Mi
